--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -55,6 +55,8 @@
     "file-loader": "^6.0.0",
     "json-server": "^0.15.1",
     "prettier": "^1.19.1",
+    "svg-inline-loader": "^0.8.2",
+    "svg-url-loader": "^6.0.0",
     "url-loader": "^4.1.0",
     "webpack-dev-server": "^3.11.0"
   },
