--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -39,7 +39,7 @@ services:
     container_name: frontend 
     stdin_open: true
     build:
-      context: ./src/Frontend
+      context: ./src/frontend
       dockerfile: Dockerfile
     deploy:
       placement:
