created the ssr functionality

--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,6 @@
     "@babel/preset-react"
   ],
   "plugins": [
-    "babel-plugin-transform-class-properties"
+    "react-hot-loader/babel"
   ]
 }
