--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Ecommerce created in React Router y Redux",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode production",
     "dev": "webpack-dev-server --open --mode development",
+    "start:dev": "nodemon src/SSR-server/index",
     "server": "json-server locations.json",
     "format": "prettier --write '{*.js,src/**/*.{js,jsx}}'",
     "lint": "eslint src/"
@@ -26,10 +26,13 @@
     "@babel/core": "^7.10.2",
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
+    "@babel/register": "^7.10.1",
     "axios": "^0.19.2",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.3",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.7.0",
@@ -57,11 +60,15 @@
     "eslint-plugin-react": "^7.20.0",
     "file-loader": "^6.0.0",
     "json-server": "^0.15.1",
+    "nodemon": "^2.0.4",
     "prettier": "^1.19.1",
+    "react-hot-loader": "^4.12.21",
     "svg-inline-loader": "^0.8.2",
     "svg-url-loader": "^6.0.0",
     "url-loader": "^4.1.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-hot-middleware": "^2.25.0"
   },
   "bugs": {
     "url": "https://github.com/kod3rsStore/Frontend"
