--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "Ecommerce created in React Router y Redux",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --open --mode development",
+    "build": "webpack-cli --config webpack.config.js",
     "start:dev": "nodemon src/SSR-server/index",
-    "server": "json-server locations.json",
     "format": "prettier --write '{*.js,src/**/*.{js,jsx}}'",
     "lint": "eslint src/"
   },
@@ -36,8 +35,6 @@
     "express": "^4.17.1",
     "helmet": "^3.22.0",
     "history": "^4.10.1",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
     "ignore-styles": "^5.0.1",
     "mini-css-extract-plugin": "^0.7.0",
     "react": "^16.13.1",
@@ -57,6 +54,7 @@
   },
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "compression-webpack-plugin": "^4.0.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-config-prettier": "^4.3.0",
@@ -71,6 +69,7 @@
     "react-hot-loader": "^4.12.21",
     "svg-inline-loader": "^0.8.2",
     "svg-url-loader": "^6.0.0",
+    "terser-webpack-plugin": "^3.0.3",
     "url-loader": "^4.1.0",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-dev-server": "^3.11.0",
