--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-manifest-plugin": "^2.2.0"
   },
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.24.1",
