--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "webpack-cli --config webpack.config.js",
     "start:dev": "nodemon src/SSR-server/index",
     "format": "prettier --write '{*.js,src/**/*.{js,jsx}}'",
-    "lint": "eslint src/"
+    "lint": "eslint src/frontend/ --ext .js --ext .jsx --fix"
   },
   "repository": {
     "type": "git",
@@ -23,20 +23,26 @@
   "license": "MIT",
   "dependencies": {
     "@babel/core": "^7.10.2",
+    "@babel/polyfill": "^7.10.1",
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
     "@babel/register": "^7.10.1",
+    "@hapi/boom": "^9.1.0",
     "asset-require-hook": "^1.2.0",
     "axios": "^0.19.2",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
+    "cookie-parser": "^1.4.5",
     "css-loader": "^3.5.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "helmet": "^3.22.0",
     "history": "^4.10.1",
     "ignore-styles": "^5.0.1",
     "mini-css-extract-plugin": "^0.7.0",
+    "passport": "^0.4.1",
+    "passport-http": "^0.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -46,6 +52,7 @@
     "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^6.0.5",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "style-loader": "^0.23.1",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
@@ -59,6 +66,7 @@
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-config-prettier": "^4.3.0",
+    "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
